feat: 与后端联调

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,23 +2,7 @@
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "cSpell.words": [
-    "antd",
-    "caizhi",
-    "echarts",
-    "imgs",
-    "jimo",
-    "jimoTracker",
-    "jotai",
-    "msgtype",
-    "noreferrer",
-    "retdata",
-    "retmsg",
-    "sourceid",
-    "swiper",
-    "tenone",
-    "WECHAT"
-  ],
+  "cSpell.words": ["WECHAT", "rtnCod", "errMsg", "infBdy", "antdToast"],
   "files.eol": "\n",
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
