--- a/package.json
+++ b/package.json
@@ -10,26 +10,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.0",
-    "@angular/common": "~13.0.0",
-    "@angular/compiler": "~13.0.0",
-    "@angular/core": "~13.0.0",
-    "@angular/forms": "~13.0.0",
-    "@angular/platform-browser": "~13.0.0",
-    "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
+    "@angular-devkit/schematics": "^12.2.5",
+    "@angular/animations": "~13.0.0-next.0",
+    "@angular/common": "~13.0.0-next.0",
+    "@angular/compiler": "~13.0.0-next.0",
+    "@angular/core": "~13.0.0-next.0",
+    "@angular/forms": "~13.0.0-next.0",
+    "@angular/platform-browser": "~13.0.0-next.0",
+    "@angular/platform-browser-dynamic": "~13.0.0-next.0",
+    "@angular/router": "~13.0.0-next.0",
     "dayjs": "^1.10.7",
     "html2canvas": "1.0.0-rc.4",
     "ng-zorro-antd-mobile": "^5.0.0",
     "query-string": "^7.0.1",
-    "rxjs": "~7.4.0",
+    "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.1",
-    "@angular/cli": "~13.0.1",
-    "@angular/compiler-cli": "~13.0.0",
+    "@angular-devkit/build-angular": "~13.0.0-next.2",
+    "@angular-eslint/builder": "12.5.0",
+    "@angular-eslint/eslint-plugin": "12.5.0",
+    "@angular-eslint/eslint-plugin-template": "12.5.0",
+    "@angular-eslint/schematics": "12.5.0",
+    "@angular-eslint/template-parser": "12.5.0",
+    "@angular/cli": "~13.0.0-next.2",
+    "@angular/compiler-cli": "~13.0.0-next.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
