--- a/proxy.config.json
+++ b/proxy.config.json
@@ -4,8 +4,6 @@
     "secure": false,
     "logLevel": "debug",
     "changeOrigin": true,
-    "pathRewrite": {
-      "^/api": ""
-    }
+    "pathRewrite": {}
   }
 }
